--- a/src/App.less
+++ b/src/App.less
@@ -20,10 +20,17 @@
                                   not supported by any browser */
 }
 
+html {
+  overscroll-behavior: none;
+  touch-action: none;
+}
+
 body {
   background: #000;
   color: #fff;
   min-height: 100vh;
+  overscroll-behavior: none;
+  touch-action: none;
 }
 
 .loading {
