--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -131,6 +131,77 @@ body {
 .fadeAnim {
   animation: fade 0.5s ease-out;
 }
+.notificationContainer {
+  display: flex;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  backdrop-filter: blur(5px);
+  justify-content: center;
+  align-items: center;
+}
+.notificationContainer .notificationBlank {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 60vh;
+  overflow: hidden;
+  border: 1px solid #4d4d4d;
+  border-radius: 15px;
+  background: linear-gradient(0deg, #000000 0%, #480505 100%);
+}
+.notificationContainer .notificationBlank .notificationTop {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  margin-top: 25px;
+  flex-direction: column;
+}
+.notificationContainer .notificationBlank .notificationTop > img {
+  border-radius: 6px;
+  border: 1px solid #4d4d4d;
+}
+.notificationContainer .notificationBlank .notificationTop .notificationText {
+  display: flex;
+  align-items: center;
+  width: 85%;
+}
+.notificationContainer .notificationBlank .notificationTop .notificationText > p {
+  margin-top: 20px;
+  font-size: 25px;
+  font-weight: 500;
+}
+.notificationContainer .notificationBlank .notificationBottom {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+.notificationContainer .notificationBlank .notificationBottom .notificationText {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  gap: 20px;
+  color: #a0a0a0;
+}
+.notificationContainer .notificationBlank .notificationBottom .btn {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, rgba(255, 0, 6, 0.42) 0%, rgba(0, 0, 0, 0) 100%, transparent 100%);
+  border: 1px solid #790b0a;
+  width: 85%;
+  border-radius: 7px;
+  user-select: text;
+}
+.notificationContainer .notificationBlank .notificationBottom .btn p {
+  font-weight: 500;
+  padding: 15px;
+}
 .homeAccount {
   touch-action: none;
   position: absolute;
