--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -165,6 +165,91 @@ body {
     animation: fade 0.5s ease-out;
 }
 
+.notificationContainer {
+    display: flex;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    backdrop-filter: blur(5px);
+    justify-content: center;
+    align-items: center;
+
+    .notificationBlank {
+        display: flex;
+        flex-direction: column;
+        
+        width: 80%;
+        // min-height: 80vh;
+        height: 60vh;
+        // max-height: 100%;
+        overflow: hidden;
+        // margin-top: 70px;
+        border: 1px solid rgb(77, 77, 77);
+        border-radius: 15px;
+
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(72,5,5,1) 100%);
+        
+        .notificationTop {
+            display: flex;
+            width: 100%;
+            align-items: center;
+            margin-top: 25px;
+            flex-direction: column;
+
+            > img {
+                border-radius: 6px;
+                border: 1px solid rgb(77, 77, 77);
+            }
+
+            .notificationText {
+                display: flex;
+                align-items: center;
+                width: 85%;
+                > p {
+                    margin-top: 20px;
+                    font-size: 25px;
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .notificationBottom {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            align-items: center;
+
+            .notificationText {
+                margin-top: 20px;
+                display: flex;
+                flex-direction: column;
+                width: 85%;
+                gap: 20px;
+                color: rgb(160, 160, 160);
+            }
+
+            .btn {
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 20px;
+                background: linear-gradient(to bottom, rgba(255,0,6,0.42) 0%, rgba(0,0,0,0) 100%, transparent 100%);
+                border: 1px solid #790b0a;
+                width: 85%;
+                border-radius: 7px;
+                user-select: text;
+    
+                p {
+                    font-weight: 500;
+                    padding: 15px;
+                }
+            }
+        }
+    }
+}
+
 .homeAccount {
     touch-action: none;
     position: absolute;
