--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -131,62 +131,80 @@ body {
 .fadeAnim {
   animation: fade 0.5s ease-out;
 }
+@media screen and (min-width: 670px) {
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
 .notificationContainer {
   display: flex;
   z-index: 2;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   backdrop-filter: blur(5px);
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
+  padding: 20px 20px 65px;
 }
-.notificationContainer .notificationBlank {
+.notificationBlank {
+  max-height: 100vh;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
-  width: 80%;
-  height: 60vh;
-  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 80%;
+  padding: 17px 17px 28px;
+  position: relative;
+  margin-top: 70px;
   border: 1px solid #4d4d4d;
   border-radius: 15px;
   background: linear-gradient(0deg, #000000 0%, #480505 100%);
 }
-.notificationContainer .notificationBlank .notificationTop {
-  display: flex;
+.raffle {
   width: 100%;
-  align-items: center;
-  margin-top: 25px;
+  height: 100%;
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
-.notificationContainer .notificationBlank .notificationTop > img {
+.image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  flex-shrink: 0;
+  object-fit: cover;
+  margin-bottom: 6px;
+}
+.image > img {
+  width: 100%;
   border-radius: 6px;
   border: 1px solid #4d4d4d;
 }
-.notificationContainer .notificationBlank .notificationTop .notificationText {
+.image > p {
+  margin-top: 10px;
+  font-size: 20px;
+}
+.notificationText {
   display: flex;
   align-items: center;
-  width: 85%;
-}
-.notificationContainer .notificationBlank .notificationTop .notificationText > p {
-  margin-top: 20px;
-  font-size: 25px;
-  font-weight: 500;
-}
-.notificationContainer .notificationBlank .notificationBottom {
-  display: flex;
+  justify-content: center;
   flex-direction: column;
-  width: 100%;
-  align-items: center;
-}
-.notificationContainer .notificationBlank .notificationBottom .notificationText {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  width: 85%;
-  gap: 20px;
   color: #a0a0a0;
+  gap: 25px;
 }
-.notificationContainer .notificationBlank .notificationBottom .btn {
+.notificationText > p {
+  font-size: 16px;
+}
+.btn {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -194,11 +212,11 @@ body {
   margin-top: 20px;
   background: linear-gradient(to bottom, rgba(255, 0, 6, 0.42) 0%, rgba(0, 0, 0, 0) 100%, transparent 100%);
   border: 1px solid #790b0a;
-  width: 85%;
   border-radius: 7px;
   user-select: text;
+  width: 100%;
 }
-.notificationContainer .notificationBlank .notificationBottom .btn p {
+.btn p {
   font-weight: 500;
   padding: 15px;
 }
