--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -165,69 +165,98 @@ body {
     animation: fade 0.5s ease-out;
 }
 
+@media screen {
+    @media (min-width: 670px) {
+        .image {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    }
+}
+
 .notificationContainer {
+    
     display: flex;
     z-index: 2;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     backdrop-filter: blur(5px);
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
+    padding: 20px 20px 65px;
+
+}
 
     .notificationBlank {
+        max-height: 100vh;
+        max-width: 100%;
         display: flex;
         flex-direction: column;
-        
-        width: 80%;
-        // min-height: 80vh;
-        height: 60vh;
-        // max-height: 100%;
-        overflow: hidden;
-        // margin-top: 70px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 80%;
+        padding: 17px 17px 28px;
+        position: relative;
+        margin-top: 70px;
         border: 1px solid rgb(77, 77, 77);
         border-radius: 15px;
 
         background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(72,5,5,1) 100%);
-        
-        .notificationTop {
-            display: flex;
+    }
+        .raffle {
             width: 100%;
-            align-items: center;
-            margin-top: 25px;
+            height: 100%;
+            display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+        }
+        
 
-            > img {
-                border-radius: 6px;
-                border: 1px solid rgb(77, 77, 77);
+
+            .image {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                width: 100%;
+                // max-width: 282px;
+                height: auto;
+                // max-height: 207.885px;
+                flex-shrink: 0;
+                object-fit: cover;
+                margin-bottom: 6px;
+                > img {
+                    width: 100%;
+                    border-radius: 6px;
+                    border: 1px solid rgb(77, 77, 77);
+                }
+
+                > p {
+                    margin-top: 10px;
+                    font-size: 20px;
+                    
+                }
             }
 
             .notificationText {
                 display: flex;
                 align-items: center;
-                width: 85%;
+                justify-content: center;
+                flex-direction: column;
+                color: #a0a0a0;
+                gap: 25px;
+                
                 > p {
-                    margin-top: 20px;
-                    font-size: 25px;
-                    font-weight: 500;
+                    font-size: 16px;
                 }
             }
-        }
+        
 
-        .notificationBottom {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            align-items: center;
-
-            .notificationText {
-                margin-top: 20px;
-                display: flex;
-                flex-direction: column;
-                width: 85%;
-                gap: 20px;
-                color: rgb(160, 160, 160);
-            }
 
             .btn {
                 cursor: pointer;
@@ -237,18 +266,15 @@ body {
                 margin-top: 20px;
                 background: linear-gradient(to bottom, rgba(255,0,6,0.42) 0%, rgba(0,0,0,0) 100%, transparent 100%);
                 border: 1px solid #790b0a;
-                width: 85%;
                 border-radius: 7px;
                 user-select: text;
-    
+                width: 100%;
                 p {
                     font-weight: 500;
                     padding: 15px;
                 }
             }
-        }
-    }
-}
+        
 
 .homeAccount {
     touch-action: none;
