--- a/src/components/Account/Account.less
+++ b/src/components/Account/Account.less
@@ -174,6 +174,77 @@ body {
     }
 }
 
+.testEnvContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    
+    .testEnvInfo {
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+
+        > p {
+            font-size: 14px;
+            color: rgb(155, 155, 155);
+        }
+
+        > span {
+            font-size: 12px;
+            color: gray;
+        }
+    }
+
+    .adminEnv {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+
+        > p {
+            font-size: 15px;
+            color: gray;
+        }
+
+        .formEnv {
+            margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+
+            > form {
+                margin-top: 10px;
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+
+                > input {
+                    height: 40px;
+                    outline: 0px solid transparent;
+                }
+
+                > button {
+                    height: 40px;
+                }
+
+                > textarea {
+                    height: 40px;
+                    outline: 0px solid transparent;
+                }
+            }
+        }
+    }
+
+    .userEnv {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+}
+
 .notificationContainer {
     
     display: flex;
